--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -393,24 +393,24 @@
 
     <!-- New Onboarding Experience -->
     <string name="onboardingWelcomeTitle">WITAMY W DUCKDUCKGO</string>
-    <string name="onboardingDaxText">Internet może być trochę przerażający.&lt;br/&gt;&lt;br/&gt;Nie martw się! Prywatne wyszukiwanie i przeglądanie jest łatwiejsze niż myślisz.</string>
+    <string name="onboardingDaxText">Internet może być trochę nieprzyjemny.&lt;br/&gt;&lt;br/&gt;Bez obaw! Prywatne wyszukiwanie i przeglądanie jest łatwiejsze niż myślisz.</string>
     <string name="onboardingLetsDoItButton">Zróbmy to!</string>
-    <string name="daxIntroCtaText">Następnie spróbuj odwiedzić jedną z twoich ulubionych stron! &lt;br/&gt;&lt;br/&gt;Zablokuję trackery, aby nie mogły cię szpiegować. Jeśli to możliwe, zaktualizuję również bezpieczeństwo twojego połączenia. &#128274;</string>
-    <string name="daxEndCtaText">Masz to! &lt;br/&gt;&lt;br/&gt;Pamiętaj: za każdym razem, gdy przeglądasz ze mną, przerażająca reklama traci skrzydła. &#128077;</string>
-    <string name="daxSerpCtaText">Twoje wyszukiwania w DuckDuckGo są anonimowe i nigdy nie przechowuję Twojej historii wyszukiwania. Zawsze. &#128588;</string>
+    <string name="daxIntroCtaText">Spróbuj teraz odwiedzić jedną z twoich ulubionych stron! &lt;br/&gt;&lt;br/&gt;Zablokuję cię, aby nie mogły cię szpiegować. Jeśli to możliwe, poprawię również bezpieczeństwo twojego połączenia. &#128274;</string>
+    <string name="daxEndCtaText">Masz to! &lt;br/&gt;&lt;br/&gt;Pamiętaj: za każdym razem, gdy przeglądasz ze mną Internet, jakaś wścibska reklama przestaje działać. &#128077;</string>
+    <string name="daxSerpCtaText">Twoje wyszukiwania w DuckDuckGo są anonimowe, a ja nigdy nie przechowuję Twojej historii wyszukiwania. Przenigdy. &#128588;</string>
     <string name="daxDefaultBrowserCtaText">Zanim wyskoczę! &lt;br/&gt;&lt;br/&gt;Chcesz ochrony trackera, gdy otwierasz linki z innych aplikacji? &lt;br/&gt;&lt;br/&gt;Ustaw DuckDuckGo jako domyślną przeglądarkę!</string>
     <string name="daxSearchWidgetCtaText">Jesteś na fali! &lt;br/&gt;&lt;br/&gt;Szukaj prywatnie jeszcze szybciej! Dodaj widżet wyszukiwania DuckDuckGo do ekranu głównego.</string>
     <string name="daxNonSerpCtaText">Każda strona ma stopień prywatności. Stuknij, aby zobaczyć, jak chroniłem twoją prywatność.&lt;br/&gt;&lt;br/&gt;Chcesz się zachwycić? Spróbuj wyczyścić swoje dane, naciskając przycisk strzału.</string>
-    <string name="daxMainNetworkStep1CtaText">Heads-up!&lt;br/&gt;&lt;br/&gt; %s prowadzi dużą sieć śledzenia.&lt;br/&gt;&lt;br/&gt;Niski stopień prywatności zapewni Ci dostęp do takich witryn.</string>
-    <string name="daxMainNetworkStep1OwnedCtaText">Heads-up!&lt;br/&gt;&lt;br/&gt; %s jest własnością %s, która prowadzi dużą sieć śledzenia.</string>
-    <string name="daxMainNetworkStep21CtaText">W rzeczywistości %s trackery czają się na około %s najlepszych witryn. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
-    <string name="daxMainNetworkStep211CtaText">W rzeczywistości trackery %s czają się w Internecie. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep1CtaText">Uwaga!&lt;br/&gt;&lt;br/&gt; %s prowadzi dużą sieć śledzenia.&lt;br/&gt;&lt;br/&gt;Niska ocena prywatności ostrzega przed stronami takimi jak ta.</string>
+    <string name="daxMainNetworkStep1OwnedCtaText">Uwaga!&lt;br/&gt;&lt;br/&gt; %s jest własnością %s, która prowadzi dużą sieć śledzenia.</string>
+    <string name="daxMainNetworkStep21CtaText">Faktem jest, że trackery %s czają się na około %s najpopularniejszych witryn. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep211CtaText">Faktem jest, że trackery %s czają się w całym Internecie. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep2CtaText">%s Zablokuję te moduły śledzące, gdy przeglądasz witryny inne niż %s.</string>
     <plurals name="daxTrackersBlockedCtaText">
-        <item quantity="one">&#160;i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
-        <item quantity="few">&#160;i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
-        <item quantity="many">&#160;i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
-        <item quantity="other">&#160;i &lt;b&gt;%d inni&lt;/b&gt; próbowali Cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="one">&#160;i &lt;b&gt;%d inny&lt;/b&gt; próbowali cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu, aby zobaczyć, kto próbuje cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="few">&#160;i &lt;b&gt;%d inni&lt;/b&gt; próbowali cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu, aby zobaczyć, kto próbuje cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="many">&#160;i &lt;b&gt;%d innych&lt;/b&gt; próbowali cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu, aby zobaczyć, kto próbuje cię śledzić, gdy odwiedzasz nową witrynę.️</item>
+        <item quantity="other">&#160;i &lt;b&gt;%d inni&lt;/b&gt; próbowali cię tutaj wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem je!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu, aby zobaczyć, kto próbuje cię śledzić, gdy odwiedzasz nową witrynę.️</item>
     </plurals>
     <string name="daxTrackersBlockedCtaZeroText">&#160;próbował cię tu wyśledzić. &lt;br/&gt;&lt;br/&gt;Zablokowałem to!&lt;br/&gt;&lt;br/&gt; can Możesz sprawdzić pasek adresu URL, aby zobaczyć, kto próbuje Cię śledzić, gdy odwiedzasz nową witrynę.️</string>
 
