--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -385,24 +385,24 @@
 
     <!-- New Onboarding Experience -->
     <string name="onboardingWelcomeTitle">¡Bienvenido a DuckDuckGo!</string>
-    <string name="onboardingDaxText">Internet puede ser un poco espeluznante.&lt;br/&gt;&lt;br/&gt;¡No te preocupes! Buscar y navegar en privado es más fácil de lo que piensas.</string>
+    <string name="onboardingDaxText">Internet puede ser un poco espeluznante.&lt;br/&gt;&lt;br/&gt;¡No te preocupes! Buscar y navegar con privacidad es más fácil de lo que piensas.</string>
     <string name="onboardingLetsDoItButton">¡De acuerdo!</string>
     <string name="daxIntroCtaText">¡A continuación, intenta visitar uno de tus sitios favoritos!&lt;br/&gt;&lt;br/&gt;Bloquearé los rastreadores para que no puedan espiarte. También haré tu conexión segura si es posible. &#128274;</string>
     <string name="daxEndCtaText">¡Lo estás haciendo muy bien!&lt;br/&gt;&lt;br/&gt;Recuerda: cada vez que navegas conmigo, anuncios y rastreadores son bloqueados. &#128077;</string>
     <string name="daxSerpCtaText">Tus búsquedas con DuckDuckGo son anónimas y nunca almaceno tu historial de búsqueda. Nunca. &#128588;</string>
-    <string name="daxDefaultBrowserCtaText">¡Antes de irme! &lt;br/&gt;&lt;br/&gt;¿Quieres protección contra rastreadores cuando abres enlaces desde otras aplicaciones? &lt;br/&gt;&lt;br/&gt;¡Haz de DuckDuckGo tu navegador predeterminado!</string>
+    <string name="daxDefaultBrowserCtaText">¡Antes de irme! &lt;br/&gt;&lt;br/&gt;¿Quieres protección contra rastreadores cuando abres enlaces desde otras aplicaciones? &lt;br/&gt;&lt;br/&gt;¡Haz que DuckDuckGo sea tu navegador predeterminado!</string>
     <string name="daxSearchWidgetCtaText">¡Qué forma de dominarlo! &lt;br/&gt;&lt;br/&gt;¡Busca en privado incluso más rápido! Añade el widget de búsqueda DuckDuckGo a tu pantalla de inicio.</string>
-    <string name="daxNonSerpCtaText">Cada sitio tiene un grado de privacidad. Toca para ver cómo protegí tu privacidad.&lt;br/&gt;&lt;br/&gt;¿Quieres algo más sofisticado? Prueba borrando tus datos presionando el botón de fuego.</string>
-    <string name="daxMainNetworkStep1CtaText">¡Aviso!&lt;br/&gt;&lt;br/&gt; %s posee una red de rastreo importante.&lt;br/&gt;&lt;br/&gt;Un grado de privacidad bajo te llevará a sitios como este.</string>
+    <string name="daxNonSerpCtaText">Cada sitio tiene un grado de privacidad. Toca para ver cómo protegí tu privacidad.&lt;br/&gt;&lt;br/&gt;¿Quieres algo más interesante? Prueba borrando tus datos presionando el botón fuego.</string>
+    <string name="daxMainNetworkStep1CtaText">¡Aviso!&lt;br/&gt;&lt;br/&gt; %s posee una red de rastreo importante.&lt;br/&gt;&lt;br/&gt;Un grado de privacidad bajo te alertará de sitios como este.</string>
     <string name="daxMainNetworkStep1OwnedCtaText">¡Aviso!&lt;br/&gt;&lt;br/&gt; %s es propiedad de %s, que posee una importante red de rastreo.</string>
-    <string name="daxMainNetworkStep21CtaText">De hecho, los rastreadores de %s acechan en aproximadamente %s de los mejores sitios. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep21CtaText">De hecho, los rastreadores de %s acechan en aproximadamente %s de los sitios más visitados. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep211CtaText">De hecho, los rastreadores de %s están al acecho en Internet. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
-    <string name="daxMainNetworkStep2CtaText">%sBloquearé estos rastreadores cuando navegues en sitios que no sean %s.</string>
+    <string name="daxMainNetworkStep2CtaText">%sBloquearé estos rastreadores cuando navegues en sitios que no pertenezca a %s.</string>
     <plurals name="daxTrackersBlockedCtaText">
         <item quantity="one">&#160;y &lt;b&gt;%d más&lt;/b&gt; intentaban rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Los he bloqueado!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de navegación para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</item>
         <item quantity="other">&#160;y &lt;b&gt;%d más&lt;/b&gt; intentaban rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Los he bloqueado!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de navegación para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;intentaba rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Lo bloqueé!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de URL para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</string>
+    <string name="daxTrackersBlockedCtaZeroText">&#160;intentaba rastrearte aquí. &lt;br/&gt;&lt;br/&gt;¡Lo he bloqueado!&lt;br/&gt;&lt;br/&gt; ☝️Puedes consultar la barra de navegación para ver quién está tratando de rastrearte cuando visitas un nuevo sitio.️</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Obtén información y consejos oficiales sobre COVID-19.</string>
