--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -403,14 +403,14 @@
     <!-- New Onboarding Experience -->
     <string name="onboardingWelcomeTitle">Добро пожаловать в DuckDuckGo!</string>
     <string name="onboardingDaxText">Иногда Интернет может быть жутковатым.&lt;br/&gt;&lt;br/&gt;Не волнуйтесь! Конфиденциальный поиск и просмотр страниц легче, чем вы думаете.</string>
-    <string name="onboardingLetsDoItButton">Давайте сделаем это!</string>
+    <string name="onboardingLetsDoItButton">Поехали!</string>
     <string name="daxIntroCtaText">Теперь попробуйте зайти на один из ваших любимых сайтов! &lt;br/&gt;&lt;br/&gt;Я заблокирую трекеры, чтобы они не могли шпионить за вами. Кроме того, если возможно, я сделаю соединение безопасным. &#128274;</string>
     <string name="daxEndCtaText">У вас получилось!&lt;br/&gt;&lt;br/&gt;Помните: когда вы заходите в сеть вместе со мной, вредная реклама не может вам досаждать. &#128077;</string>
     <string name="daxSerpCtaText">Все, что вы ищете в DuckDuckGo остается анонимным — я никогда не сохраняю вашу историю поиска. Никогда. &#128588;</string>
     <string name="daxNonSerpCtaText">Каждый сайт имеет уровень конфиденциальности. Нажмите, чтобы узнать, как я защитил вашу конфиденциальность.&lt;br/&gt;&lt;br/&gt;Хотите стать еще круче? Попробуйте очистить данные, нажав кнопку c пламенем.</string>
     <string name="daxMainNetworkStep1CtaText">Внимание!&lt;br/&gt;&lt;br/&gt; %s входит в крупную сеть отслеживания.&lt;br/&gt;&lt;br/&gt;Низкий уровень конфиденциальности позволит вам получать информацию о подобных сайтах.</string>
     <string name="daxMainNetworkStep1OwnedCtaText">Внимание!&lt;br/&gt;&lt;br/&gt; %s принадлежит %s, который управляет крупной сетью отслеживания.</string>
-    <string name="daxMainNetworkStep21CtaText">Программы отслеживания %s скрываются на крупных сайтах %s. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
+    <string name="daxMainNetworkStep21CtaText">Программы отслеживания %s скрываются на %s крупных сайтов. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep211CtaText">На самом деле, программы отслеживания %s скрываются по всему Интернету. &#128561;&lt;br/&gt;&lt;br/&gt;</string>
     <string name="daxMainNetworkStep2CtaText">%sЯ заблокирую программы отслеживания во время посещения сайтов %s.</string>
     <plurals name="daxTrackersBlockedCtaText">
@@ -419,7 +419,7 @@
         <item quantity="many">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
         <item quantity="other">&#160;и еще &lt;b&gt;%d&lt;/b&gt; пытались отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал их!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</item>
     </plurals>
-    <string name="daxTrackersBlockedCtaZeroText">&#160;пытался отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал это!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</string>
+    <string name="daxTrackersBlockedCtaZeroText">&#160;пытался отследить вас здесь. &lt;br/&gt;&lt;br/&gt;Я заблокировал его!&lt;br/&gt;&lt;br/&gt; ☝️Вы можете видеть в адресной строке, отслеживает ли вас кто-то во время посещения нового сайта.️</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Получить официальную информацию и советы в связи с COVID-19.</string>
