--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -378,6 +378,7 @@
     <!-- Dax Dialog -->
     <string name="daxDialogHideButton">Skrij</string>
     <string name="daxDialogPhew">Fuj!</string>
+    <string name="daxDialogNext">Naslednji</string>
     <string name="daxDialogHighFive">Petka!</string>
     <string name="daxDialogGotIt">Razumem</string>
     <string name="hideTipsTitle">Skrij preostale nasvete?</string>
