new app version 5.49.0 and release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release we added a quick way to get official information and tips about COVID-19.
+We updated the app onboarding experience so Dax will provide new users with more tips on how to get started.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
