Prepare for release

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-We updated the app onboarding experience so Dax will provide new users with more tips on how to get started.
+We added a download confirmation dialog and a number of other bug fixes and improvements.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
